charts/falcone-knative/bundle/stages/03-webhook-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: knative-serving
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/version: 1.22.1
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: falcone-knative
    falcone.io/knative-bundle-version: 1.22.1
    falcone.io/knative-owner: __FALCONE_OWNER__
    falcone.io/install-stage: webhook-backend
  annotations:
    falcone.io/upstream-release: knative-v1.22.1
    falcone.io/knative-owner: __FALCONE_OWNER__
spec:
  selector:
    matchLabels:
      app: webhook
      role: webhook
  template:
    metadata:
      labels:
        app: webhook
        role: webhook
        app.kubernetes.io/component: webhook
        app.kubernetes.io/version: 1.22.1
        app.kubernetes.io/name: knative-serving
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: webhook
              topologyKey: kubernetes.io/hostname
            weight: 100
      serviceAccountName: controller
      containers:
      - name: webhook
        image: gcr.io/knative-releases/knative.dev/serving/cmd/webhook@sha256:8470456be214e93a84e3c7b79a632aa9978bd8ecda553feaa47878a2c24ab84d
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        ports:
        - name: metrics
          containerPort: 9090
        - name: profiling
          containerPort: 8008
        - name: https-webhook
          containerPort: 8443
        readinessProbe:
          periodSeconds: 1
          httpGet:
            scheme: HTTPS
            port: 8443
        livenessProbe:
          periodSeconds: 10
          httpGet:
            scheme: HTTPS
            port: 8443
          failureThreshold: 6
          initialDelaySeconds: 20
      terminationGracePeriodSeconds: 300
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
